--- a/ecommerce-ui/public/index.html
+++ b/ecommerce-ui/public/index.html
@@ -21,14 +21,30 @@
         margin-bottom: 100px;;
       }
       .available {
-        width: 49%;
+        width: 60%;
         float: left;
+        border-right: 2px solid #bbb;
+
+      }
+      .available img {
+        width: 500px;
       }
       .cart{
         width: 30%;
         float: right;
         padding-left: 20px;
-        border-left: 2px solid #bbb;
+      }
+      .cart p {
+        padding-bottom: 0;
+        margin-bottom: 0;
+      }
+      .cart h3 {
+        padding-top: 0;
+        margin-top: 6px;
+        margin-bottom: 6px;
+      }
+      .cart button {
+        margin-bottom: 10px;
       }
     </style>
     <!--
